--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>DailyUI Challenge 001</title>
+  <title>UI the me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link rel='stylesheet prefetch' href='css/bootstrap.min.css'>
@@ -16,7 +16,7 @@
   <div class="container">
 	<header>
 		<h1>
-			<a href="#">
+			<a href="t.me/pet_project_UI_me_bot">
 				<img src="img/logo-1.png" alt="Authentic Collection">
 			</a>
 		</h1>
@@ -49,6 +49,9 @@
 </div>
 
 <script src="js/index.js"></script>
+<script>
+    window.history.replaceState({}, null, '/');
+</script>
 
 </body>
 </html>
